# buy-n-share

./: HISTORY  Makefile.am  README.md  buy-n-share-config.cpp  buy-n-share-config.h  buy-n-share.cpp  buy-n-share.h  buynshare.fbs  buynshare_generated.h  config.h  configure.ac  fbclient.cpp  fbclient.h  холодильник010817.xlsx  холодильник020817.xlsx
docs/: README.md
docs/_layouts/: default.html
fbs/: buynshare.fbs  payments.fbs
php/: add_fridge.php  add_fridgeuser.php  add_meal.php  add_mealcard.php  add_purchase.php  add_user.php  add_vote.php  buynshare.php  calc.php  env.php  index.php  ls_fridge.php  ls_fridgeuser.php  ls_meal.php  ls_mealcard.php  ls_purchase.php  ls_user.php  ls_userfridge.php  rm_fridge.php  rm_fridgeuser.php  rm_purchase.php  rm_vote.php
php/bs/: Fridge.php  FridgeMealCards.php  FridgePurchases.php  FridgeUser.php  FridgeUsers.php  Fridges.php  Geo.php  Meal.php  MealCard.php  MealCards.php  Meals.php  Payment.php  Payments.php  Purchase.php  Purchases.php  User.php  UserFridges.php  UserPurchases.php  Users.php
sql/: clear.sql  postgresql.sql
tools/: fridge-ikfia-221.csv  import-meal.sh  import-purchase-vote.sh  холодильник_260717.xlsx
win/: buy-n-share.sln  buy-n-share.vcxproj  buy-n-share.vcxproj.filters
